syntax = "proto3";
package dna;

message DNA {
	string DNA = 1;
	repeated Input inputs = 2;
	repeated Layer layers = 3;
	repeated Output outputs = 4;
	repeated Connection connections = 5;
	
	message Input {
		string layerName = 1;
		repeated Connection connections = 2;
		Transform inputTransform = 3;
		Transform outputTransform = 4;		
	}

	message Layer {
		string layerName = 1;
		repeated Size layerSize = 2;
		repeated Connection connections = 3;
		Transform inputTransform = 4;
		Transform outputTransform = 5;		
		
		oneof SubLayer {
			LayerConvolution layerConvolution = 6;
			LayerActivation layerActivation = 7;
			LayerDropout layerDropout = 8;
		}		
	}
	
	message LayerConvolution {
		uint64 convolutionDimension = 1;
		uint64 filters = 2;
		repeated uint64 kernelSize = 3;
		string borderMode = 4;
		repeated uint64 inputShape = 5;
	}
	
	message LayerActivation {
		string activationType = 1;
	}

	message LayerDropout {
		double dropPercentage = 1;
	}
	
	message Output {
		string layerName = 1;
		string outputLayerType = 2;
		repeated Connection connections = 3;
		Transform inputTransform = 4;
		Transform outputTransform = 5;				
	}
	
	message Transform {
		string transformerName = 1;
		string informationType = 2;
		repeated Size transformSize = 3;
		repeated Parameter transformParam = 4;
	}
	
	message Connection {
		string sourceLayerName = 1;
		string destinationLayerName = 2;
	}
	
	message Size {
		uint64 dimension = 1;
		uint64 dimensionSize = 2;
	}
	
	message Parameter {
		string parameterName = 1;
		string parameterValue = 2;
	}
}
